# CKD-Predictor

./: Dockerfile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  setup.py
data/: clean_ckd.csv
models/: ckd_model.pkl  feature_columns.pkl  scaler.pkl
notebooks/: eda_preprocessing.ipynb  model_training.ipynb
static/: style.css
templates/: index.html  result.html
