[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ckd-predictor"
version = "0.1.0"
description = "Chronic Kidney Disease Prediction App"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.13"
Flask = "2.3.3"
joblib = "1.3.2"
numpy = "1.24.3"
pandas = "2.0.3"
scikit-learn = "1.3.0"
gunicorn = "21.2.0"

[project]
name = "ckd-predictor"
version = "0.1.0"
description = "Chronic Kidney Disease Prediction App"
dependencies = [
    "Flask==2.3.3",
    "joblib==1.3.2",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scikit-learn==1.3.0",
    "gunicorn==21.2.0"
]