[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ckd-predictor"
version = "0.1.0"
description = "Chronic Kidney Disease Prediction App"
authors = ["Your Name <your.email@example.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.13"
Flask = "2.3.3"
joblib = "1.3.2"
numpy = "1.24.3"
pandas = "2.0.3"
scikit-learn = "1.3.0"
gunicorn = "21.2.0"